python recommender + loading + styling stuff
Former-commit-id: c9d8e6898e088a930373812e6bf497395be0b0dd
Former-commit-id: 1e0965d39f7be1c2c3f78294ac95dbd11c73b575

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,3 +30,15 @@ label {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
+.container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.review-box{
+  width: 200px;
+
+}
